--- a/styles.css
+++ b/styles.css
@@ -1,185 +1,305 @@
-* {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+:root {
+    --primary-color: #00040b;
+    --primary-light: #a0b3e5;
+    --blue-color: #114a70cc;
 }
 
-main {
-    background-image: url('images/Homescreen.jpg');
-    background-size: cover;
-    background-position: center;
-    margin: 0;
+* {
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+    font-family: 'Veranda', sans-serif;
+    text-decoration: none;
 }
 
 body {
-    background-color: #0b0b0b;
+    font-family: 'Segoe UI', sans-serif;
+    background-color: #00040b;
+    color: #eee;
 }
 
-header {
-    padding: 1rem;
-    text-align: right;
+h1,
+h2,
+h3,
+h4 {
+    font-family: Verdana, sans-serif;
 }
 
-nav ul {
-    list-style: none;
-}
-
-nav ul li {
-    display: inline;
-    margin-right: 20px;
-}
-
-nav ul li a {
-    color: #b4a9a9;
-    text-decoration: none;
-    font-size: 22px;
-}
-
-#intro {
-    font-size: 56px;
-    color: white;
-    text-align: left;
-    margin-left: 80px;
-}
-
-#booknow {
-    font-size: 20px;
-    font-weight: 600;
-    color: rgb(0, 0, 0);
-    margin-left: 130px;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 50px;
-    background: radial-gradient(circle at top, rgba(153, 255, 140, 1) 0%, rgba(67, 217, 172, 1) 100%);
-}
-
-#destination {
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    color: white;
-}
-
-/* Add this CSS to style the submit button */
-#destination form button[type="submit"] {
-    display: inline-block;
-    margin: 60px 30px 20px;
-    /* Adjust margin to raise the button up */
-    border-radius: 10px;
-    overflow: hidden;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    background: radial-gradient(circle at top, rgba(153, 255, 140, 1) 0%, rgba(67, 217, 172, 1) 100%);
-    color: rgb(0, 0, 0);
-    padding: 12px 20px;
-    font-size: 20px;
-    font-weight: 600;
-    border: none;
-    text-align: center;
-    text-decoration: none;
-}
-
-/* Add hover effect */
-#destination form button[type="submit"]:hover {
-    transform: translateY(-2px);
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-
-/* Add focus effect */
-#destination form button[type="submit"]:focus {
-    outline: none;
-}
-
-#destination form .form-group {
-    display: inline-block;
-    vertical-align: top;
-    /* Align form groups vertically */
-    margin-right: 20px;
-    /* Add spacing between form groups */
-}
-
-.form-group {
-    display: inline-block;
-    margin: 50px 10px;
-    /* Add some spacing between form-group elements */
-    border-radius: 10px;
-    /* Rounded corners */
-    overflow: hidden;
-    /* Hide overflow content */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    /* Box shadow for a cool effect */
-}
-
-.form-group label {
-    color: #676767;
-    font-size: 24px;
-}
-
-.form-group,
-.form-group button {
-    display: inline-block;
-    margin: 50px 10px;
-    /* Add some spacing between form-group elements */
-    border-radius: 10px;
-    /* Rounded corners */
-    overflow: hidden;
-    /* Hide overflow content */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    /* Box shadow for a cool effect */
-    background: linear-gradient(to bottom right, #282828, #151515);
-    /* Gradient background */
-}
-
-.form-group input,
-.form-group select,
-.form-group button {
-    border: none;
-    background-color: transparent;
-    /* Transparent background */
-    color: rgb(255, 255, 255);
-    padding: 12px 20px;
-    /* Padding for spacing */
+.nav-bar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
     width: 100%;
-    /* Take full width */
-    box-sizing: border-box;
-    /* Include padding and border in element's total width */
-    outline: none;
-    /* Remove default focus outline */
+    background-color: transparent;
+    box-shadow: 1px 1px 2px #114a70cc;
 }
 
-/* Hover effect */
-.form-group:hover {
-    transform: translateY(-2px);
-    /* Move the box slightly upwards on hover */
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-    /* Increase box shadow on hover */
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-    /* Smooth transition effect */
+.content {
+    max-width: 1300px;
+    margin: 0 auto;
+    padding: 1.6rem 1rem;
 }
 
-/* Input focus effect */
-.form-group input:focus,
-.form-group select:focus {
-    background-color: rgba(255, 255, 255, 0.1);
-    /* Semi-transparent background on focus */
+.nav-bar .content {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 2rem;
+}
+
+.nav-bar .site-logo {
+    padding: .25rem;
+}
+
+.nav-bar .site-logo .logo-link {
+    font-weight: 500;
+    font-size: 22px;
+    line-height: 22px;
+    text-transform: capitalize;
+    color: #fff;
+    border-top: 3px solid #114a70cc;
+}
+
+.nav-bar .navigation {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    gap: 1.4rem;
+}
+
+.nav-bar .navigation .link a {
+    padding: .25rem .5rem;
+    font-weight: 500;
+    font-size: 16px;
+    text-transform: capitalize;
+    color: #fff;
+    border-top: 1px solid transparent;
+    transition: all .6s;
+}
+
+.nav-bar .navigation .link:hover a {
+    color: #114a70cc;
+    border-top: 1px solid #114a70cc;
+}
+
+.home {
+    background: linear-gradient(to top, #00040b, #00040bbb), url(images/header.jpg);
+    background-repeat: no-repeat;
+    background-position: top right;
+    background-size: cover;
+    min-height: 100vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 1rem;
+}
+
+.home .content {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    width: 100%;
+}
+
+.home .content h1 {
+    font-size: 46px;
+    line-height: 58px;
+    letter-spacing: 4px;
+    text-transform: uppercase;
+    font-weight: 500;
+    background-color: url(images/header.jpg);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    -webkit-text-stroke: 1px #fff;
+    max-width: 450px;
+}
+
+.home .content h4 {
+    font-size: 26px;
+    line-height: 26px;
+    font-weight: 300;
+    color: #666666;
+}
+
+.btn-explore {
+    width: fit-content;
+    background-color: #114a70cc;
+    padding: .9rem 2.4rem;
+    padding-left: 1rem;
+    font-size: 16px;
+    line-height: 16px;
+    color: #eee;
+    border: 2px solid #114a70cc;
+    margin-top: 2rem;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    transition: all 1s;
+}
+
+.btn-explore:hover {
+    border: 2px solid #114a70cc;
+    background-color: #114a70cc;
+    padding-left: 2rem;
+}
+
+section {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 2rem;
+}
+
+section .content {
+    width: 100%;
+    max-width: 1300px;
+}
+
+section .heading {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 1.2rem;
+}
+
+section .heading .title {
+    text-transform: uppercase;
+    font-size: 48px;
+    font-weight: 500;
+    letter-spacing: 3px;
+    color: #fff;
+}
+
+section .heading .subtitle {
+    font-size: 18px;
+    font-weight: 300;
+    color: #00040b;
+}
+
+.about .items {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 3rem;
+    width: 100%;
+}
+
+.about .items .item,
+.about .items .image {
+    width: 100%;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.about .items .image {
+    padding: 2rem;
+    padding-left: 0rem;
+}
+
+.about .items .image img {
+    width: 100%;
+    height: fit-content;
+    object-fit: cover;
+}
+
+.about .item-content {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.about .items .item .about-title {
+    font-size: 46px;
+    font-weight: 500;
+    color: #fff;
+}
+
+.about .items .item .about-desc {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.about .items .item .about-desc p {
+    font-size: 16px;
+    line-height: 24px;
+    color: #eee;
+}
+
+.about .item-data {
+    width: 100%;
+    padding: 2rem 0rem;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1rem;
+}
+
+.about .item-data .col {
+    width: 100%;
+    padding: 2rem 1rem;
+    background-color: #40404044;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    border-top: 6px solid #000;
+    cursor: pointer;
+}
+
+.about .item-data .col:hover {
+    background-color: #00000077;
+    border-top: 6px solid #fff;
+}
+
+.about .item-data .col h1 {
+    text-align: center;
+    font-size: 38px;
+}
+
+.about .item-data .col span {
+    text-align: center;
+    font-size: 16px;
+    font-weight: 300;
+}
+
+.next {
+    background-color: #00040b;
+}
+
+.next .items {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 2rem;
 }
 
 .popular-picks {
     color: white;
     font-size: 36px;
+    text-align: center;
+    margin-top: 50px;
 }
 
 .places button {
+    max-width: 100%;
+    width: 100px;
+    height: 50px;
     font-size: 20px;
     font-weight: 600;
-    color: #676767;
-    margin-left: -50px;
+    color: #ffffff;
     margin-top: -50px;
     border: none;
     background-color: #1E1E1E;
-    border-radius: 10px;
+    border-radius: 5px;
 }
 
 .places button:focus {
-    background: radial-gradient(circle at top, rgba(153, 255, 140, 1) 0%, rgba(67, 217, 172, 1) 100%);
+    background: radial-gradient(circle at top, #2e90d1cc 0%, #114a70cc 100%);
     /* Change the background color when the button is focused */
     outline: none;
     /* Remove the default focus outline */
@@ -189,13 +309,14 @@ nav ul li a {
     display: flex;
     font-size: 18px;
     justify-content: space-around;
+    margin-top: 200px;
 }
 
 /* Add this CSS to style the selected button */
 .places button.selected {
     background: radial-gradient(circle at top, rgba(153, 255, 140, 1) 0%, rgba(67, 217, 172, 1) 100%);
     /* Change the background color of the selected button */
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
 }
 
 .places button.selected:hover {
@@ -242,142 +363,50 @@ nav ul li a {
 
 .overlay {
     position: absolute;
-    top: 70%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: #ffffff;
-    text-align: bottom;
-    font-size: 20px;
-}
-
-.blog-item {
-    padding: 10px;
-    margin-bottom: -40px;
-    text-align: left;
-    display: flex;
-    margin-left: -50px;
-}
-
-.blog-item img {
-    width: 150px;
-    height: 100px;
-    margin-right: 20px;
-}
-
-.blog-title .pod-title {
-    margin-top: 50px;
-    font-weight: bold;
-    font-size: 24px;
-}
-
-.blog-description,
-.pod-description {
-    margin-top: -15px;
-    font-size: 18px;
-    /* Add margin between title and description */
-}
-
-.circle {
-    height: 300px;
-    width: 300px;
-    border: 1px;
-    background-color: #99FF8C;
-    border-radius: 50%;
-    margin-left: 980px;
-    margin-top: -400px;
-}
-
-
-
-/* Styles for the "Read More" link */
-.read-more {
-    font-size: 14px;
-    /* Adjusted font size for the "Read More" link */
-    color: #99FF8C;
-    margin-top: -5px;
-
-    /* Adjusted margin for the "Read More" link */
-}
-
-.circle img {
-    height: 400px;
-    width: 300px;
-    margin-top: -75px;
-    margin-left: -20px;
-}
-
-.testimony {
-    color: white;
-}
-
-.testimonial {
-    position: relative;
-    margin-top: 200px;
-}
-
-.testimonial img.colored-image {
-    width: 800px;
-    height: 400px;
-    margin-left: 700px;
-}
-
-.testimonial .image-overlay {
-    position: absolute;
-    width: 60%;
-    height: 100%;
-    margin-left: 700px;
-    background-color: rgb(255, 255, 255);
-    /* Change the color as desired */
-    mix-blend-mode: multiply;
-    /* Blend mode to multiply the color with the image */
-}
-
-.testimony {
-    color: white;
-    margin-top: -400px;
-    margin-left: 90px;
-}
-
-.praise {
-    font-size: 24px;
-    text-align: center;
-    background: linear-gradient(to right, rgba(156, 160, 155), rgba(67, 217, 172));
-    /* Linear gradient background with the specified colors */
-    border-radius: 8px;
-    padding: 20px;
-    box-shadow: 0 4px 8px rgba(171, 171, 171, 0.1);
-    width: 300px;
-    height: 130px;
-}
-
-footer {
-    background-color: black;
-    color: #fff;
-    padding: 20px;
-    display: flex;
-    justify-content: space-around;
-    margin-top: 50px;
+    bottom: 30px;
+    left: 0;
     width: 100%;
+    padding: 20px;
+    z-index: 2;
+    /* Ensure the overlay is above the image */
+    background: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.7));
+    box-sizing: border-box;
+    color: white;
+    text-align: center;
+    font-size: 24px;
 }
 
-.footer-section h3 {
-    margin-bottom: 10px;
+.city {
+    font-size: 36px;
+    position: relative;
+    z-index: 3;
+    /* Ensure the text is above the overlay */
 }
 
-.footer-section ul {
-    list-style: none;
-    padding: 0;
+.country {
+    font-size: 18px;
+    font-style: italic;
+    position: relative;
+    z-index: 3;
+    /* Ensure the text is above the overlay */
 }
 
-.footer-section ul li {
-    margin-bottom: 5px;
+/* Add a gradient overlay to darken the bottom part of the image */
+.container img {
+    position: relative;
+    z-index: 1;
+    /* Ensure the image is below the overlay and text */
 }
 
-.footer-section ul li a {
-    text-decoration: none;
-    color: #fff;
-}
-
-.footer-section ul li a:hover {
-    color: #ccc;
+.container::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 40%;
+    /* Adjust the height of the darkened area as needed */
+    background: linear-gradient(to top, rgba(0, 0, 0, 0.918), transparent);
+    /* Adjust the gradient colors as needed */
+    z-index: 2;
 }
